modified:   www/css/index.css 	modified:   www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -78,7 +78,7 @@
 
         <div id="status" class="contentA">
           <h3>Status</h3>
-          <img id="Result"></img>
+          <img id="Result" class='result'></img>
           <!--
           <img class="result" src="img/banner.png">
           -->
