modified:   www/index.html 	modified:   www/js/index.js

--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
 	    <link rel="stylesheet" type="text/css" href="css/index.css" />
 	    <link rel="stylesheet" type="text/css" href="css/jquery.mobile.css" />
 	    <link rel="stylesheet" type="text/css" href="css/jquery.mobile.theme.css" />
-	    <title>Trial Design:0</title>
+	    <title>LRV Monitor</title>
 	</head>
 
 	<body>
@@ -54,7 +54,7 @@
 		  <div data-role="page" id="home">
 
         <header data-role="header" class="custom_bar">
-          <h1>Trial Design:0</h1>
+          <h1>LRV Monitor</h1>
         </header>
 
         <div id="warning" class="contentA">
